Fix: cards spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,11 @@ a, .btn, .list-group-item-action {
     text-decoration: none;
     background-color: #f8f9fa;
 }
+
+[class^="col-"]{
+    padding: 0 8px;
+}
+
+.container {
+    padding: 0 23px;
+}
